--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -81,10 +81,10 @@
             <a class="nav-link" routerLink="/admin"><i class="fa-solid fa-user-shield"></i> Admin Paneli</a>
           </li>
           <li *ngIf="userRole === 'yonetici'"class="nav-item">
-            <a class="nav-link" routerLink=""><i class="fa-solid fa-user-gear"></i> Yönetici Paneli</a>
+            <a class="nav-link" routerLink="/yonetici"><i class="fa-solid fa-user-gear"></i> Yönetici Paneli</a>
           </li>
           <li *ngIf="userRole === 'juri'" class="nav-item">
-            <a class="nav-link" routerLink=""><i class="fa-solid fa-user-pen"></i> Juri Paneli</a>
+            <a class="nav-link" routerLink="/juri"><i class="fa-solid fa-user-pen"></i> Juri Paneli</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
