--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -52,18 +52,11 @@
         <ul class="nav nav-tabs" id="applicationTabs" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="active-tab" data-bs-toggle="tab" data-bs-target="#active"
-                    type="button" role="tab" (click)="status = 'active'">Aktif Başvurular</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="past-tab" data-bs-toggle="tab" data-bs-target="#past" type="button"
-                    role="tab" (click)="status = 'past'">Geçmiş Başvurular</button>
+                    type="button" role="tab" (click)="status = 'active'">Başvurular</button>
             </li>
         </ul>
         <div class="tab-content mt-3">
             <div class="tab-pane fade show active" id="active" role="tabpanel">
-                <utk-cards [status]="status"></utk-cards>
-            </div>
-            <div class="tab-pane fade" id="past" role="tabpanel">
                 <utk-cards [status]="status"></utk-cards>
             </div>
         </div>
