--- a/src/app/components/yonetici/yonetici.component.html
+++ b/src/app/components/yonetici/yonetici.component.html
@@ -39,9 +39,15 @@
               </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
+              <a [routerLink]="['/yonetici/ilan/juri']" data-toggle="tooltip" data-placement="right" title="İlan Ekle">
+                <i class="fa-solid fa-users	"></i>
+                <span [class.hidden]="isSidebarCollapsed && !isMobileView">İlan Jüri Atama</span>
+              </a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
               <a [routerLink]="['/yonetici/ilan/basvurular']" data-toggle="tooltip" data-placement="right" title="İlan Başvurular">
-                <i class="fa-solid fa-plus-circle"></i>
-                <span [class.hidden]="isSidebarCollapsed && !isMobileView">İlan başvuruları</span>
+                <i class="fa-solid fa-clipboard-list"></i>
+                <span [class.hidden]="isSidebarCollapsed && !isMobileView">İlan Başvuruları</span>
               </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
@@ -83,16 +89,16 @@
           </ul>
         </div>
   
-        <div class="nav-section">
+        <div class="nav-section" *ngIf="userRole === 'admin' || userRole === 'juri'">
           <h4 class="nav-section-title">Diğer Paneller</h4>
           <ul class="nav-list">
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="userRole === 'admin'">
               <a [routerLink]="['/admin']" data-toggle="tooltip" data-placement="right" title="Yönetici Paneli">
                 <i class="fa-solid fa-user-gear"></i>
                 <span [class.hidden]="isSidebarCollapsed && !isMobileView">Admin Paneli</span>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="userRole === 'juri'">
               <a [routerLink]="['/juri']" data-toggle="tooltip" data-placement="right" title="Juri Paneli">
                 <i class="fa-solid fa-user-pen"></i>
                 <span [class.hidden]="isSidebarCollapsed && !isMobileView">Juri Paneli</span>
