--- a/src/app/components/admin-user-management/admin-user-management.component.css
+++ b/src/app/components/admin-user-management/admin-user-management.component.css
@@ -42,8 +42,10 @@
 }
 
 .profile-img-default {
-  font-size: 30px;
+  font-size: 40px;
   border-radius: 50%;
+  width: 50px;
+  height: 50px;
   /* Yuvarlak şekil */
   display: block;
   color: var(--text-color) !important;
