--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,7 @@
-<h1 class="text-center mt-3">Welcome to UTK</h1>
-<p class="text-center">Kocaeli University Academic Staff Application System</p>
+<div class="text-center">
+    <h1 class="mt-3">Kocaeli Üniversitesi</h1>
+    <p>Akademik Personel Başvuru Sistemine Hoşgeldiniz!</p>
+</div>
 <div class="container mt-4">
     <div class="mt-4">
         <ul class="nav nav-tabs" id="applicationTabs" role="tablist">
